--- a/src/components/calc/Calc.module.css
+++ b/src/components/calc/Calc.module.css
@@ -17,4 +17,11 @@
 .viewGramms {
     display: flex;
     flex-direction: row;
+    column-gap: 50px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
 }
